--- a/css/register.css
+++ b/css/register.css
@@ -30,26 +30,50 @@ body {
   background-size: cover;
   background-position: center center;
   z-index: -1;
+  background-image: no-repeat;
 }
 
 .logo a {
   font-size: 1.5rem;
   font-weight: 600;
+  top: 25px;
   font-family: var(--header-font);
   color: var(--white);
   text-decoration: none;
 }
 
-.nav__menu__btn {
-  font-size: 1.5rem;
-  color: var(--white);
-  cursor: pointer;
+.logo {
+  margin-top: 20px;
 }
 
 .nav__action__btn {
-  display: none;
+  position: absolute;
+  right: 0;
+  top: 25px;
   width: 100px;
   max-height: max-content;
+  max-width: max-content;
+  background-color: transparent;
+}
+
+.nav__action__btn button {
+  padding: 0.75rem 1.5rem;
+  outline: none;
+  border: none;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 1rem;
+  background-color: transparent;
+  border-radius: 5px;
+  transition: 0.3s;
+  cursor: pointer;
+  color: var(--white);
+}
+
+.nav__action__btn button:hover {
+  background-color: rgba(10, 30, 39, 0.5);
+  color: var(--white);
 }
 
 nav {
@@ -58,54 +82,6 @@ nav {
   margin: auto;
   padding: 1rem;
   z-index: 9;
-}
-
-.nav__bar {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-@keyframes show-nav {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes hide-nav {
-  0% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-.nav__menu__btn {
-  font-size: 1.5rem;
-  color: var(--white);
-  cursor: pointer;
-}
-
-.nav__action__btn {
-  display: none;
-}
-
-@media (width > 768px) {
-  .nav__logo {
-    flex: 1;
-  }
-  .nav__menu__btn {
-    display: none;
-  }
-
-  .nav__action__btn {
-    justify-content: flex-end;
-    display: flex;
-    flex: 1;
-  }
 }
 
 .wrapper-p {
