--- a/css/register.css
+++ b/css/register.css
@@ -30,9 +30,24 @@ body {
   background-size: cover;
   background-position: center center;
   z-index: -1;
-  background-image: no-repeat;
+
 }
 
+nav {
+  position: relative;
+  max-width: var(--max-width);
+  margin: auto;
+  padding: 1rem;
+  z-index: 9;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: transparent;
+  padding: 10px 20px;
+}
 .logo a {
   font-size: 1.5rem;
   font-weight: 600;
@@ -42,46 +57,37 @@ body {
   text-decoration: none;
 }
 
-.logo {
-  margin-top: 20px;
-}
-
-.nav__action__btn {
-  position: absolute;
-  right: 0;
-  top: 25px;
-  width: 100px;
-  max-height: max-content;
-  max-width: max-content;
-  background-color: transparent;
-}
-
-.nav__action__btn button {
-  padding: 0.75rem 1.5rem;
-  outline: none;
+.navbar .register button {
   border: none;
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  font-size: 1rem;
-  background-color: transparent;
-  border-radius: 5px;
-  transition: 0.3s;
-  cursor: pointer;
   color: var(--white);
+  background-color: transparent;
+  font-size: 1rem;
 }
 
-.nav__action__btn button:hover {
+.navbar .register {
+  background-color: transparent;
+  color: white;
+  padding: 10px 20px;
+  text-decoration: none;
+  border-radius: 5px;
+}
+
+.navbar .register:hover {
   background-color: rgba(10, 30, 39, 0.5);
   color: var(--white);
 }
 
-nav {
-  position: relative;
-  max-width: var(--max-width);
-  margin: auto;
-  padding: 1rem;
-  z-index: 9;
+.btn {
+  width: 100%;
+  height: 45px;
+  background: var(--primary-color);
+  border: none;
+  outline: none;
+  border-radius: 6px;
+  cursor: pointer;
+  font-size: 1em;
+  color: var(--white);
+  font-weight: 500;
 }
 
 .wrapper-p {
@@ -231,19 +237,6 @@ nav {
 
 .remember-forgot a:hover {
   text-decoration: underline;
-}
-
-.btn {
-  width: 100%;
-  height: 45px;
-  background: var(--primary-color);
-  border: none;
-  outline: none;
-  border-radius: 6px;
-  cursor: pointer;
-  font-size: 1em;
-  color: var(--white);
-  font-weight: 500;
 }
 
 .login-register {
