--- a/css/blog.css
+++ b/css/blog.css
@@ -26,20 +26,48 @@ img {
   max-width: 1320px;
   margin: 0 auto;
   padding: 0 1.2rem;
+  background: transparent;
 }
 
 /* header */
 header {
   min-height: 100vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+  background: radial-gradient(
+    rgba(255, 255, 255, 0),
+    var(--primary-color)
+  ),
     url(../css/assets/header-1.jpg) center/cover no-repeat fixed;
   display: flex;
   flex-direction: column;
   justify-content: stretch;
 }
 .navbar {
-  background: rgba(0, 0, 0, 0.6);
+  background: transparent;
   padding: 1.2rem;
+}
+.navbar .navbar-nav button {
+  border: none;
+  color: var(--white);
+  background-color: transparent;
+  font-size: 1rem;
+}
+.navbar .navbar-nav button:hover {
+  background-color: rgba(10, 30, 39, 0.5);
+  color: var(--white);
+  width: 100px;
+  transform: translateX(25px);
+}
+.btn {
+  width: 100%;
+  height: 45px;
+  background: var(--primary-color);
+  border: none;
+  outline: none;
+  border-radius: 6px;
+  cursor: pointer;
+  font-size: 1em;
+  color: var(--white);
+  font-weight: 500;
 }
 .navbar-brand {
   color: #fff;
@@ -115,16 +143,20 @@ header {
 .search-btn {
   width: 40px;
   font-size: 1.1rem;
-  color: var(--dark);
+  color: var(--primary-color);
   border: none;
   background: transparent;
   outline: 0;
   cursor: pointer;
 }
+.search-btn:hover {
+  color: var(--secondary-color);
+}
 
 /* design */
 .design {
   padding: 4.5rem 0;
+  background: var(--primary-color);
 }
 .title {
   text-align: center;
@@ -133,6 +165,7 @@ header {
 .title h2 {
   font-family: var(--Playfair);
   font-size: 2.4rem;
+  color: var(--secondary-color);
 }
 .title p {
   text-transform: uppercase;
@@ -190,7 +223,7 @@ header {
   margin: 0 auto;
 }
 .design-title a {
-  color: var(--primary-color);
+  color: var(--white);
   text-decoration: none;
   text-transform: capitalize;
   font-family: var(--Playfair);
@@ -198,7 +231,7 @@ header {
 
 /* blog */
 .blog {
-  background: var(--white);
+  background: var(--primary-color);
   padding: 4.5rem 0;
 }
 .blog-content {
@@ -212,21 +245,23 @@ header {
   bottom: 10px;
   right: 10px;
   background: var(--primary-color);
-  color: var(--white);
+  color: var(--secondary-color);
   font-size: 1.4rem;
   padding: 0.3rem 0.6rem;
 }
 .blog-text {
+  color: var(--white);
   margin: 2.2rem 0;
   padding: 0 1rem;
 }
 .blog-text span {
+  
   font-weight: 300;
   display: block;
   padding-bottom: 0.5rem;
 }
 .blog-text h2 {
-  font-family: var(--Playfair);
+  color: var(--secondary-color);
   padding: 1rem 0;
   font-size: 1.65rem;
   font-weight: 500;
@@ -236,11 +271,12 @@ header {
   font-size: 1.1rem;
   opacity: 0.9;
   padding-bottom: 1.2rem;
+  color: var(--text-light);
 }
 .blog-text a {
   font-size: 1.1rem;
   text-decoration: none;
-  color: var(--primary-color);
+  color: var(--secondary-color);
   display: inline-block;
   background: var(--primary-color);
   color: #fff;
@@ -248,7 +284,7 @@ header {
   transition: all 0.5s ease;
 }
 .blog-text a:hover {
-  background: var(--exDark);
+  color: var(--secondary-color);
 }
 
 /* Media Queries */
