--- a/css/postDetail.css
+++ b/css/postDetail.css
@@ -2,16 +2,15 @@
 @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic);
 
 /* variables */
-:root{
---card-width:  350px;
---card-height: 500px;
---h-color:     #9CC9E3;
---yellow:      #D0BB57;
---txt-color:   #DCE3E7;
---txt-dark:    #565D63;
---txt-med:     #818181;    
+:root {
+  --card-width: 350px;
+  --card-height: 500px;
+  --h-color: #9cc9e3;
+  --yellow: #d0bb57;
+  --txt-color: #dce3e7;
+  --txt-dark: #565d63;
+  --txt-med: #818181;
 }
-
 
 * {
   box-sizing: border-box;
@@ -19,11 +18,11 @@
   padding: 0;
 }
 
-body{
+body {
   background: #323c41;
 }
 
-.blog-card{
+.blog-card {
   width: var(--card-width);
   height: var(--card-height);
   position: absolute;
@@ -32,30 +31,39 @@ body{
   margin: -250px 0 0 -175px;
   overflow: hidden;
   border-radius: 10px;
-  box-shadow: 3px 3px 20px rgba(0, 0, 0, .5);
+  box-shadow: 3px 3px 20px rgba(0, 0, 0, 0.5);
   text-align: center;
-  
-  &.spring-fever{
-    background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/1765/bg-blog-card.jpg) no-repeat;
-  }
-  
-  .color-overlay{
+
+  .color-overlay {
     /* Rectangle 11: */
-    background: rgba(84,104,110,0.4);
+    background: rgba(84, 104, 110, 0.4);
     width: var(--card-width);
     height: var(--card-height);
     position: absolute;
     z-index: 10;
     top: 0;
     left: 0;
-    transition: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/1765/bg-blog-card.jpg) .3s cubic-bezier(.33,.66,.66,1);
+    transition: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/1765/bg-blog-card.jpg)
+      0.3s cubic-bezier(0.33, 0.66, 0.66, 1);
   }
-  .gradient-overlay{
+  .gradient-overlay {
     /* bg-gradient: */
-    background-image: -webkit-linear-gradient(rgba(0,0,0,0.00) 0%, rgba(0,0,0,.6) 21%);
-    background-image: -moz-linear-gradient(rgba(0,0,0,0.00) 0%, rgba(0,0,0,.6) 21%);
-    background-image: -o-linear-gradient(rgba(0,0,0,0.00) 0%, rgba(0,0,0,.6) 21%);
-    background-image: linear-gradient(rgba(0,0,0,0.00) 0%, rgba(0,0,0,.6) 21%);
+    background-image: -webkit-linear-gradient(
+      rgba(0, 0, 0, 0) 0%,
+      rgba(0, 0, 0, 0.6) 21%
+    );
+    background-image: -moz-linear-gradient(
+      rgba(0, 0, 0, 0) 0%,
+      rgba(0, 0, 0, 0.6) 21%
+    );
+    background-image: -o-linear-gradient(
+      rgba(0, 0, 0, 0) 0%,
+      rgba(0, 0, 0, 0.6) 21%
+    );
+    background-image: linear-gradient(
+      rgba(0, 0, 0, 0) 0%,
+      rgba(0, 0, 0, 0.6) 21%
+    );
     width: var(--card-width);
     height: var(--card-height);
     position: absolute;
@@ -63,20 +71,24 @@ body{
     left: 0;
     z-index: 15;
   }
-  
-  &:hover{
-    
-    .card-info{
+
+  &:hover {
+    .card-info {
       opacity: 1;
       bottom: 120px;
     }
-    .color-overlay{
-      background: rgba(84,104,110,0.8);
+    .color-overlay {
+      background: rgba(84, 104, 110, 0.8);
     }
   }
 }
+.blog-card.spring-fever {
+  background-image: url(https://fastly.picsum.photos/id/182/200/300.jpg?grayscale&hmac=zSesX4S0kW_FXxvoceDR8BV9ZyscpyaVv3nnNczqUdQ);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 
-.title-content{
+.title-content {
   text-align: center;
   margin: 70px 0 0 0;
   position: absolute;
@@ -85,31 +97,31 @@ body{
   top: 0;
   left: 0;
 }
-h3{
+h3 {
   font-size: 20px;
   font-weight: 500;
   letter-spacing: 2px;
-  color: var(--h-color);
-  font-family: 'Roboto', sans-serif;
+  color: black;
+  font-family: "Roboto", sans-serif;
   margin-bottom: 0;
 }
-hr{
+hr {
   width: 50px;
   height: 3px;
   margin: 20px auto;
   border: 0;
   background: var(--yellow);
 }
-.intro{
+.intro {
   width: 170px;
   margin: 0 auto;
   color: var(--txt-color);
-  font-family: 'Droid Serif', serif;
+  font-family: "Droid Serif", serif;
   font-size: 13px;
   font-style: italic;
   line-height: 18px;
 }
-.card-info{
+.card-info {
   width: 100%;
   position: absolute;
   bottom: 100px;
@@ -117,54 +129,56 @@ hr{
   margin: 0 auto;
   padding: 0 50px;
   color: var(--txt-color);
-  font-family: 'Droid Serif', serif;
+  font-family: "Droid Serif", serif;
   font-style: 16px;
   line-height: 24px;
   z-index: 20;
   opacity: 0;
-  transition: bottom .3s, opacity .3s cubic-bezier(.33,.66,.66,1);
+  transition: bottom 0.3s, opacity 0.3s cubic-bezier(0.33, 0.66, 0.66, 1);
 }
 
-.utility-info{
+.utility-info {
   position: absolute;
   bottom: 0px;
   left: 0;
   z-index: 20;
 }
-.utility-list{
+.utility-list {
   list-style-type: none;
   margin: 0 0 30px 20px;
   padding: 0;
   width: 100%;
-  
-  li{
+
+  li {
     margin: 0 15px 0 0;
     padding: 0 0 0 22px;
     display: inline-block;
     color: var(--txt-color);
-    font-family: 'Roboto', sans-serif;
-    cursor: pointer;   
-    
-    &.comments{
-      background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/1765/icon-chat.svg) no-repeat 0 .1em;
+    font-family: "Roboto", sans-serif;
+    cursor: pointer;
+
+    &.comments {
+      background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/1765/icon-chat.svg)
+        no-repeat 0 0.1em;
     }
-    &.date{
-      background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/1765/icon-calendar.svg) no-repeat 0 .1em;
+    &.date {
+      background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/1765/icon-calendar.svg)
+        no-repeat 0 0.1em;
     }
-    
-    a{
+
+    a {
       color: var(--txt-color);
       text-decoration: none;
-      transition: color .3s;
-      
-      &:hover{
+      transition: color 0.3s;
+
+      &:hover {
         color: var(--yellow);
       }
     }
   }
 }
 
-.comment-card{
+.comment-card {
   width: 300px;
   height: 410px;
   background: #fff;
@@ -173,12 +187,12 @@ hr{
   left: 25px;
   border-radius: 8px;
   z-index: 20;
-  box-shadow: 0px 0px 10px rgba(0,0,0,.3);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
   padding: 30px;
   overflow: hidden;
   overflow-y: scroll;
 }
-.btn-close{
+.btn-close {
   position: absolute;
   top: 30px;
   right: 30px;
@@ -187,27 +201,27 @@ hr{
   text-decoration: none;
   opacity: 0;
 }
-.comment-post{
+.comment-post {
   text-align: left;
   border-bottom: 1px dashed lighten(#000, 80%);
   padding: 0 0 20px 0;
   margin: 0 0 20px 0;
-  
-  .avatar{
+
+  .avatar {
     float: left;
     width: 12%;
     margin: 0 20px 0 0;
   }
-  h4{
-    font-family: 'Roboto', sans-serif;
+  h4 {
+    font-family: "Roboto", sans-serif;
     font-size: 16px;
     color: --txt-dark;
     margin-bottom: 5px;
   }
-  .comment{
+  .comment {
     float: left;
     width: 78%;
-    font-family: 'Droid Serif', serif;
+    font-family: "Droid Serif", serif;
     font-size: 13px;
     color: --txt-med;
     line-height: 17px;
