--- a/css/blog.css
+++ b/css/blog.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700;800;900&family=Quicksand:wght@300;400;500;600;700&display=swap");
-
 :root {
   --primary-color: #0a1e27;
   --secondary-color: #e9c675;
@@ -109,6 +107,7 @@ header {
   font-size: 3rem;
   font-family: var(--Playfair);
   line-height: 1.2;
+  position: relative;
 }
 .banner-title span {
   font-family: var(--Playfair);
@@ -154,25 +153,21 @@ header {
 }
 
 /* design */
-.design {
-  padding: 4.5rem 0;
-  background: var(--primary-color);
-}
 .title {
   text-align: center;
-  padding: 1rem 0;
 }
 .title h2 {
   font-family: var(--Playfair);
   font-size: 2.4rem;
   color: var(--secondary-color);
+  top: 0;
 }
 .title p {
   text-transform: uppercase;
   padding: 0.6rem 0;
 }
 .design-content {
-  margin: 2rem 0;
+  margin-top: 0;
 }
 .design-item {
   cursor: pointer;
