--- a/css/postDetail.css
+++ b/css/postDetail.css
@@ -1,5 +1,5 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700);
-@import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic);
+
+
 
 /* variables */
 :root {
@@ -25,10 +25,11 @@ body {
 .blog-card {
   width: var(--card-width);
   height: var(--card-height);
-  position: absolute;
+  position: relative;
   top: 50%;
   left: 50%;
-  margin: -250px 0 0 -175px;
+  
+  margin: auto 0 0 -175px;
   overflow: hidden;
   border-radius: 10px;
   box-shadow: 3px 3px 20px rgba(0, 0, 0, 0.5);
