--- a/css/register.css
+++ b/css/register.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600&family=Poppins:wght@400;500;600;700&display=swap");
 
 :root {
   --primary-color: #0a1e27;
@@ -22,54 +21,10 @@ body {
 
 body {
   font-family: "Poppins", sans-serif;
-  background-image: radial-gradient(
-      rgba(255, 255, 255, 0),
-      var(--primary-color)
-    ),
-    url("assets/header-1.jpg");
   background-size: cover;
   background-position: center center;
   z-index: -1;
-
-}
-
-nav {
-  position: relative;
-  max-width: var(--max-width);
-  margin: auto;
-  padding: 1rem;
-  z-index: 9;
-}
-
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: transparent;
-  padding: 10px 20px;
-}
-.logo a {
-  font-size: 1.5rem;
-  font-weight: 600;
-  top: 25px;
-  font-family: var(--header-font);
-  color: var(--white);
-  text-decoration: none;
-}
-
-.navbar .register button {
-  border: none;
-  color: var(--white);
-  background-color: transparent;
-  font-size: 1rem;
-}
-
-.navbar .register {
-  background-color: transparent;
-  color: white;
-  padding: 10px 20px;
-  text-decoration: none;
-  border-radius: 5px;
+  background-color: var(--white);
 }
 
 .navbar .register:hover {
@@ -88,6 +43,8 @@ nav {
   font-size: 1em;
   color: var(--white);
   font-weight: 500;
+  align-items: center center;
+  align-self: center center;
 }
 
 .wrapper-p {
@@ -101,7 +58,7 @@ nav {
   position: relative;
   width: 440px;
   height: 440px;
-  background: transparent;
+  background: var(--white);
   border: 2px solid rgba(255, 255, 255, 0.5);
   border-radius: 20px;
   backdrop-filter: blur(100px);
@@ -242,7 +199,7 @@ nav {
 .login-register {
   font-size: 0.9em;
   color: var(--primary-color);
-  text-align: center;
+  text-align: center center;
   font-weight: 500;
   margin: 25px 0 10px;
 }
