--- a/css/account.css
+++ b/css/account.css
@@ -15,6 +15,7 @@ body {
   margin-top: 100px;
   display: flex;
   justify-content: center;
+  padding-bottom: 10rem;
 }
 
 /* .container .row .col-lg-4 {
