--- a/css/register.css
+++ b/css/register.css
@@ -53,6 +53,7 @@ body {
   justify-content: center;
   align-items: center;
   padding-bottom: 10rem;
+  background-color: var(--primary-color);
 }
 
 .wrapper {
