--- a/css/index.css
+++ b/css/index.css
@@ -35,13 +35,13 @@
   max-width: var(--max-width);
   margin: auto;
   padding: 5rem 1rem;
+  background-color: var(--primary-color);
 }
 
 .section__subheader {
   position: relative;
   isolation: isolate;
   margin-bottom: 1rem;
-  padding-left: 5rem;
   font-size: 0.9rem;
   font-weight: 600;
   letter-spacing: 2px;
@@ -92,6 +92,7 @@ body {
 body {
   font-family: "Poppins", sans-serif;
 }
+
 
 
 .header {
