--- a/css/createPost.css
+++ b/css/createPost.css
@@ -3,11 +3,15 @@
     top: 0;
     left: 0;
     width: 100%;
-    display: none;
+    display: flex;
     height: 100%;
     justify-content: center;
     align-items: center;
     background: rgba(0, 0, 0, 0.5);
+  }
+
+  #cancelButton {
+    margin-left: 25px;
   }
   
   .popup-content {
