--- a/css/nav.css
+++ b/css/nav.css
@@ -78,9 +78,9 @@ body {
 
 nav {
   position: relative;
-  max-width: var(--max-width);
+  width: 100%;
   margin: auto;
-  padding: 1rem;
+  padding: 1rem 7rem;
   z-index: 9;
   right: 0;
   background-color: var(--primary-color);
