--- a/css/register.css
+++ b/css/register.css
@@ -1,4 +1,3 @@
-
 :root {
   --primary-color: #0a1e27;
   --secondary-color: #e9c675;
@@ -72,7 +71,7 @@ body {
   overflow: hidden;
   transform: scale(0);
   transition: transform 0.5s ease, height 0.2s ease;
-
+  top: 100px;
 }
 
 .wrapper.active-popup {
